[-] Bug fixed.
[+] Feature added.
[*] Change.

2009-??-?? v1.32
================
- fixed [ 2493925 ] java.util.NoSuchElementException if @AssertValid is used

2008-12-27 v1.31
================
- fixed Object level constraints defined in XML were ignored by the XMLConfigurator (thanks to Niels Kirkegaard)
- fixed [ 2063142 ] doc typo
- fixed prefix of default constraint message codes (changed from net.sf.oval.constraints to net.sf.oval.constraint)
- fixed an issue where OVal was translating exception thrown by guarded methods into ValidationFailedException
- fixed bug [ 2164438 ] SerializableField bug when dealing with private fields
- fixed bug [ 2166232 ] JPAAnnotationsConfigurer should use AssertValidCheck for @ManyToMany
- fixed bug [ 2192175 ] Validator.validate checks the same object multiple times
* upgraded Spring 2.5.6, Groovy 1.5.7, MVEL 1.3.15, Paranamer 1.1.6, jRuby 1.1.6, AspectJ 1.6.2, XStream 1.3.1
+ added support for multi-valued constraints
* JPAAnnotationsConfigurer now interprets @Column.precision/scale for numeric fields
- fixed [ oval-Bugs-2406574 ] wrong scripting language enumerations in xsd and dtd

2008-08-10 v1.30
================
- fixed an StackOverflowError that occurs when referencing the same property via _this.<property_name> in scripted pre/post conditions
- fixed some issues in the DTD
* migrated from Ant to Maven as project build system
* upgraded to AspectJ 1.6.1
* upgraded to Groovy 1.5.6
* upgraded to JRuby 1.1.3
* upgraded to MVEL 1.3.11
* upgraded to OGNL 2.7.3
* upgraded to Paranamer 1.1.4
* upgraded to Spring 2.5.5
* changed parameter substring() of annotation @HasSubstring() to value() which allows less verbose usage, e.g. @HasSubstring("foo") instead of @HasSubstring(substring="foo")
* OVal now respects the order in which constraint annotations are returned by the reflection API when validating objects (thanks to CannyDuck)
+ @MatchPattern can now match against multiple patterns
+ added support for logging via SLF4J